fixed font issues on safari

--- a/themes/inhabitent-theme/sass/_fonts.scss
+++ b/themes/inhabitent-theme/sass/_fonts.scss
@@ -44,7 +44,7 @@
          url('../fonts/merriweather-light-webfont.woff') format('woff'),
          url('../fonts/merriweather-light-webfont.ttf') format('truetype'),
          url('../fonts/merriweather-light-webfont.svg#merriweatherlight') format('svg');
-    font-weight: lighter;
+    font-weight: normal;
     font-style: normal;
 
 }
@@ -60,7 +60,7 @@
          url('../fonts/merriweather-lightitalic-webfont.woff') format('woff'),
          url('../fonts/merriweather-lightitalic-webfont.ttf') format('truetype'),
          url('../fonts/merriweather-lightitalic-webfont.svg#merriweatherlight_italic') format('svg');
-    font-weight: lighter;
+    font-weight: normal;
     font-style: italic;
 
 }
