--- a/themes/inhabitent-theme/sass/_typography.scss
+++ b/themes/inhabitent-theme/sass/_typography.scss
@@ -20,6 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 	clear: both;
 	letter-spacing: .15rem;
 	font-family: $font_accent;
+	color: black;
 	margin: 0;
 	text-transform: uppercase;
 }
